added intracellular penalty term and Word2Vec gene features

--- a/development.ipynb
+++ b/development.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/nethome/mbafna6/.local/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/nethome/mbafna6/miniconda3/envs/CeSpGRN/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "(1597, 45, 45)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "LR_df = pd.read_csv(\"./data/human_lr_pair.txt\", sep=\"\\t\")\n",
+    "LR_df = pd.read_csv(\"./data/celltalk_human_lr_pair.txt\", sep=\"\\t\")\n",
     "receptors = set(LR_df[\"receptor_gene_symbol\"].to_list())\n",
     "ligands = set(LR_df[\"ligand_gene_symbol\"].to_list())\n",
     "\n",
@@ -70,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib_venn._common.VennDiagram at 0x7fe743c8dbe0>"
+       "<matplotlib_venn._common.VennDiagram at 0x7fecac2b79d0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -122,9 +122,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './out/preprocessing_output/genelevel_features'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m wv_from_text \u001b[39m=\u001b[39m KeyedVectors\u001b[39m.\u001b[39;49mload_word2vec_format(\u001b[39m\"\u001b[39;49m\u001b[39m./out/preprocessing_output/genelevel_features\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/CeSpGRN/lib/python3.8/site-packages/gensim/models/keyedvectors.py:1723\u001b[0m, in \u001b[0;36mKeyedVectors.load_word2vec_format\u001b[0;34m(cls, fname, fvocab, binary, encoding, unicode_errors, limit, datatype, no_header)\u001b[0m\n\u001b[1;32m   1676\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[1;32m   1677\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload_word2vec_format\u001b[39m(\n\u001b[1;32m   1678\u001b[0m         \u001b[39mcls\u001b[39m, fname, fvocab\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, binary\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, encoding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mutf8\u001b[39m\u001b[39m'\u001b[39m, unicode_errors\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mstrict\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m   1679\u001b[0m         limit\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, datatype\u001b[39m=\u001b[39mREAL, no_header\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[1;32m   1680\u001b[0m     ):\n\u001b[1;32m   1681\u001b[0m     \u001b[39m\"\"\"Load KeyedVectors from a file produced by the original C word2vec-tool format.\u001b[39;00m\n\u001b[1;32m   1682\u001b[0m \n\u001b[1;32m   1683\u001b[0m \u001b[39m    Warnings\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1721\u001b[0m \n\u001b[1;32m   1722\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1723\u001b[0m     \u001b[39mreturn\u001b[39;00m _load_word2vec_format(\n\u001b[1;32m   1724\u001b[0m         \u001b[39mcls\u001b[39;49m, fname, fvocab\u001b[39m=\u001b[39;49mfvocab, binary\u001b[39m=\u001b[39;49mbinary, encoding\u001b[39m=\u001b[39;49mencoding, unicode_errors\u001b[39m=\u001b[39;49municode_errors,\n\u001b[1;32m   1725\u001b[0m         limit\u001b[39m=\u001b[39;49mlimit, datatype\u001b[39m=\u001b[39;49mdatatype, no_header\u001b[39m=\u001b[39;49mno_header,\n\u001b[1;32m   1726\u001b[0m     )\n",
+      "File \u001b[0;32m~/miniconda3/envs/CeSpGRN/lib/python3.8/site-packages/gensim/models/keyedvectors.py:2052\u001b[0m, in \u001b[0;36m_load_word2vec_format\u001b[0;34m(cls, fname, fvocab, binary, encoding, unicode_errors, limit, datatype, no_header, binary_chunk_size)\u001b[0m\n\u001b[1;32m   2049\u001b[0m             counts[word] \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(count)\n\u001b[1;32m   2051\u001b[0m logger\u001b[39m.\u001b[39minfo(\u001b[39m\"\u001b[39m\u001b[39mloading projection weights from \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m, fname)\n\u001b[0;32m-> 2052\u001b[0m \u001b[39mwith\u001b[39;00m utils\u001b[39m.\u001b[39;49mopen(fname, \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m fin:\n\u001b[1;32m   2053\u001b[0m     \u001b[39mif\u001b[39;00m no_header:\n\u001b[1;32m   2054\u001b[0m         \u001b[39m# deduce both vocab_size & vector_size from 1st pass over file\u001b[39;00m\n\u001b[1;32m   2055\u001b[0m         \u001b[39mif\u001b[39;00m binary:\n",
+      "File \u001b[0;32m~/miniconda3/envs/CeSpGRN/lib/python3.8/site-packages/smart_open/smart_open_lib.py:177\u001b[0m, in \u001b[0;36mopen\u001b[0;34m(uri, mode, buffering, encoding, errors, newline, closefd, opener, compression, transport_params)\u001b[0m\n\u001b[1;32m    174\u001b[0m \u001b[39mif\u001b[39;00m transport_params \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    175\u001b[0m     transport_params \u001b[39m=\u001b[39m {}\n\u001b[0;32m--> 177\u001b[0m fobj \u001b[39m=\u001b[39m _shortcut_open(\n\u001b[1;32m    178\u001b[0m     uri,\n\u001b[1;32m    179\u001b[0m     mode,\n\u001b[1;32m    180\u001b[0m     compression\u001b[39m=\u001b[39;49mcompression,\n\u001b[1;32m    181\u001b[0m     buffering\u001b[39m=\u001b[39;49mbuffering,\n\u001b[1;32m    182\u001b[0m     encoding\u001b[39m=\u001b[39;49mencoding,\n\u001b[1;32m    183\u001b[0m     errors\u001b[39m=\u001b[39;49merrors,\n\u001b[1;32m    184\u001b[0m     newline\u001b[39m=\u001b[39;49mnewline,\n\u001b[1;32m    185\u001b[0m )\n\u001b[1;32m    186\u001b[0m \u001b[39mif\u001b[39;00m fobj \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    187\u001b[0m     \u001b[39mreturn\u001b[39;00m fobj\n",
+      "File \u001b[0;32m~/miniconda3/envs/CeSpGRN/lib/python3.8/site-packages/smart_open/smart_open_lib.py:363\u001b[0m, in \u001b[0;36m_shortcut_open\u001b[0;34m(uri, mode, compression, buffering, encoding, errors, newline)\u001b[0m\n\u001b[1;32m    360\u001b[0m \u001b[39mif\u001b[39;00m errors \u001b[39mand\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mb\u001b[39m\u001b[39m'\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m mode:\n\u001b[1;32m    361\u001b[0m     open_kwargs[\u001b[39m'\u001b[39m\u001b[39merrors\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m errors\n\u001b[0;32m--> 363\u001b[0m \u001b[39mreturn\u001b[39;00m _builtin_open(local_path, mode, buffering\u001b[39m=\u001b[39;49mbuffering, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mopen_kwargs)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './out/preprocessing_output/genelevel_features'"
+     ]
+    }
+   ],
    "source": [
     "wv_from_text = KeyedVectors.load_word2vec_format(\"./out/preprocessing_output/genelevel_features\")\n",
     "# np.load(\"./out/preprocessing_output/genelevel_features\", allow_pickle=True).shape"
@@ -826,6 +842,197 @@
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Data(x=[1597, 125], edge_index=[2, 7985], y=[1597, 1597]),\n",
+       " Data(x=[71865, 64], edge_index=[2, 1824841]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from src import models, training\n",
+    "from torch_geometric.nn import GAE\n",
+    "import torch\n",
+    "import os\n",
+    "\n",
+    "preprocess_output_path = \"./out/preprocessing_output/\"\n",
+    "training_output_path = \"./out/training_output/\"\n",
+    "celllevel_data, genelevel_data = training.create_pyg_data(preprocess_output_path)\n",
+    "data = (celllevel_data, genelevel_data)\n",
+    "\n",
+    "data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GAE(\n",
+       "  (encoder): MultiviewEncoder(\n",
+       "    (encoder_g): SubgraphEncoder(\n",
+       "      (conv1): GCNConv(64, 32)\n",
+       "      (conv2): GCNConv(32, 32)\n",
+       "      (linear): Linear(in_features=1440, out_features=32, bias=True)\n",
+       "    )\n",
+       "    (encoder_c): GraphEncoder(\n",
+       "      (conv1): GCNConv(125, 32)\n",
+       "      (conv2): GCNConv(32, 32)\n",
+       "    )\n",
+       "  )\n",
+       "  (decoder): InnerProductDecoder()\n",
+       ")"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def build_clarifyGAE_pytorch(data, hyperparams = None):\n",
+    "    num_cells, num_cellfeatures = data[0].x.shape[0], data[0].x.shape[1]\n",
+    "    num_genes, num_genefeatures = data[1].x.shape[0], data[1].x.shape[1]\n",
+    "    hidden_dim = hyperparams[\"concat_hidden_dim\"] // 2\n",
+    "    num_genespercell = hyperparams[\"num_genespercell\"]\n",
+    "\n",
+    "    cellEncoder = models.GraphEncoder(num_cellfeatures, hidden_dim)\n",
+    "    geneEncoder = models.SubgraphEncoder(num_features=num_genefeatures, hidden_dim=hidden_dim, num_vertices = num_cells, num_subvertices = num_genespercell)\n",
+    "    \n",
+    "    multiviewEncoder = models.MultiviewEncoder(SubgraphEncoder = geneEncoder, GraphEncoder = cellEncoder)\n",
+    "    gae = GAE(multiviewEncoder)\n",
+    "\n",
+    "    return gae\n",
+    "\n",
+    "\n",
+    "hyperparameters = {\n",
+    "    \"num_genespercell\": 45,\n",
+    "    \"concat_hidden_dim\": 64,\n",
+    "    \"optimizer\" : \"adam\",\n",
+    "    \"criterion\" : torch.nn.BCELoss(),\n",
+    "    \"num_epochs\": 400\n",
+    "}\n",
+    "\n",
+    "trained_gae = build_clarifyGAE_pytorch(data, hyperparameters)\n",
+    "trained_gae.load_state_dict(torch.load(os.path.join(training_output_path,f'trained_gae_model.pth')))\n",
+    "trained_gae.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cell_level_encoder = trained_gae.encoder.encoder_c\n",
+    "gene_level_encoder = trained_gae.encoder.encoder_g\n",
+    "z = trained_gae.encode(data[0].x,data[1].x, data[0].edge_index, data[1].edge_index)\n",
+    "z_c = cell_level_encoder(data[0].x, data[0].edge_index)\n",
+    "z_g = gene_level_encoder.embed(data[1].x, data[1].edge_index)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[-0.1112,  0.1229, -0.2332,  ...,  0.0674,  0.0020, -0.0342],\n",
+       "         [-0.1296,  0.1299, -0.2572,  ...,  0.0346,  0.0223, -0.0537],\n",
+       "         [-0.0744,  0.1145, -0.1754,  ...,  0.0124,  0.0714, -0.0825],\n",
+       "         ...,\n",
+       "         [ 0.0970,  0.0127,  0.1533,  ...,  0.0845, -0.0419,  0.0275],\n",
+       "         [-0.0340, -0.0606, -0.3503,  ..., -0.0693,  0.0326, -0.0410],\n",
+       "         [ 0.0226, -0.0130, -0.4287,  ..., -0.1413,  0.1442, -0.1397]],\n",
+       "        grad_fn=<CatBackward0>),\n",
+       " torch.Size([1597, 64]))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z,z.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[-0.1112,  0.1229, -0.2332,  ...,  0.0888, -0.2396, -0.3305],\n",
+       "         [-0.1296,  0.1299, -0.2572,  ...,  0.0953, -0.2569, -0.3565],\n",
+       "         [-0.0744,  0.1145, -0.1754,  ...,  0.1117, -0.1832, -0.2226],\n",
+       "         ...,\n",
+       "         [ 0.0970,  0.0127,  0.1533,  ..., -0.1178, -0.5628,  0.2156],\n",
+       "         [-0.0340, -0.0606, -0.3503,  ...,  0.1191,  0.2159,  0.6880],\n",
+       "         [ 0.0226, -0.0130, -0.4287,  ...,  0.1142,  0.1929,  0.5404]],\n",
+       "        grad_fn=<AddBackward0>),\n",
+       " torch.Size([1597, 32]))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_c,z_c.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[-2.1153e-02, -6.9548e-03,  1.8205e-05,  ...,  1.0911e-02,\n",
+       "           7.8208e-03,  4.7564e-02],\n",
+       "         [-1.0616e-02, -1.1525e-02,  5.1655e-03,  ...,  2.8392e-02,\n",
+       "           7.4270e-04,  4.9644e-02],\n",
+       "         [ 5.0740e-03, -2.7834e-02,  1.7913e-03,  ...,  2.4759e-02,\n",
+       "          -2.4404e-04,  4.3329e-02],\n",
+       "         ...,\n",
+       "         [-4.9639e-02, -2.9899e-02, -4.0271e-02,  ..., -4.8675e-02,\n",
+       "           7.9036e-03,  1.3046e-02],\n",
+       "         [-5.2377e-02, -3.2574e-02, -3.8744e-02,  ..., -4.4512e-02,\n",
+       "           1.4279e-02,  1.8906e-02],\n",
+       "         [-1.6025e-02, -3.2065e-02, -3.3183e-02,  ..., -1.9597e-02,\n",
+       "           6.1737e-03,  4.5368e-02]], grad_fn=<AddBackward0>),\n",
+       " torch.Size([71865, 32]))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_g, z_g.shape"
    ]
   },
   {
